# mlua_serialization_bug_repro

./: .gitignore  Cargo.toml  Makefile  README.md  script.lua
src/: lib.rs
