[package]
name = "repro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.6", features = ["luajit", "module", "serialize", "vendored"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "repro"
crate-type = ["cdylib"]
